--- a/src/app/components/task-details-dialog/task-details-dialog.component.html
+++ b/src/app/components/task-details-dialog/task-details-dialog.component.html
@@ -35,9 +35,13 @@
             <mat-error *ngIf="taskForm.get('taskName')?.touched && taskForm.get('taskName')?.hasError('invalidPattern')">
               Invalid pattern: include letters and optionally numbers/symbols.
             </mat-error>
-            <mat-error *ngIf="duplicateNameError">
+            <!-- <mat-error *ngIf="duplicateNameError">
               Task name already exists.
-            </mat-error>
+            </mat-error> -->
+            <mat-error *ngIf="taskForm.get('taskName')?.hasError('duplicateName')">
+  Task name already exists.
+</mat-error>
+
           </mat-form-field>
         </div>
 
@@ -170,10 +174,13 @@
           </button>
           <button mat-raised-button color="primary" type="button" (click)="updateTask()" 
                   *ngIf="editable" class="submit-btn"
-                  [disabled]="duplicateNameError || !taskForm.valid || !hasChanges()">
+                  [disabled]="taskForm.get('taskName')?.hasError('duplicateName') || !taskForm.valid || !hasChanges()">
+       
+
             <mat-icon>save</mat-icon>
             Update
           </button>
+           <!-- <mat-error *ngIf="duplicateNameError">Task name is already exists</mat-error> -->
         </div>
       </div>
     </form>
